# cme-mbo-foundation-model

./: .gitignore  .orchestration-kit.env  AGENTS.md  CLAUDE.md  Cargo.toml  FEATURE_PARITY_SPEC.md  README.md
.claude/hooks/: pre-tool-use.sh
.claude/prompts/: frame.md  math-audit.md  math-construct.md  math-formalize.md  math-polish.md  math-prove.md  math-specify.md  math-survey.md  read.md  run.md  survey.md  synthesize.md  tdd-breadcrumbs.md  tdd-green.md  tdd-red.md  tdd-refactor.md
.kit/: LAST_TOUCH.md  QUESTIONS.md  RESEARCH_LOG.md  experiment.sh  lit-deep-dives.md  lit-review-lob-dl.md  math.sh  spec-dual-head-reconstruction.md  tdd.sh
.kit/docs/: bar-count-parity-fix.md  parity-test-pipeline.md  parity-validation-harness.md  rithmic-protobuf-codegen.md  wire-parity-cli.md  xgboost-ffi.md
.kit/results/: cpcv-backtest-results.json
.kit/results/ec2-barrier-sweep/: cpcv-19-19.json  cpcv-19-7.json  holdout-time-exit.json
.kit/results/ec2-cpcv-20260301T123259Z-3a0ca2c9/: cpcv-backtest-results.json
.kit/results/ec2-cpcv-20260301T193617Z-300f1a48/: cpcv-backtest-results.json
.kit/results/label-geometry-1h/geom_19_7/: 2022-01-02.parquet  2022-01-04.parquet  2022-01-05.parquet  2022-01-06.parquet  2022-01-07.parquet  2022-01-09-ticks.parquet  2022-01-09.parquet  2022-01-10.parquet  2022-01-11.parquet  2022-01-12.parquet  2022-01-13.parquet  2022-01-16-ticks.parquet  2022-01-16.parquet  2022-01-19.parquet  2022-01-20.parquet  2022-01-23-ticks.parquet  2022-01-24.parquet  2022-01-25.parquet  2022-01-26.parquet  2022-01-27.parquet  2022-01-30-ticks.parquet  2022-01-31.parquet  2022-02-06-ticks.parquet  2022-02-07.parquet  2022-02-08.parquet  2022-02-13-ticks.parquet  2022-02-14.parquet  (+170 more)
.kit/scripts/: augment-parquet.py  batch-export.sh  batch-sorrys.py  context-checkpoint.sh  diagnostic-tick-export.sh  ec2-barrier-sweep.sh  ec2-launch-backtest.sh  enumerate-sorrys.sh  experiment-watch.py  lake-summarized.sh  lake-timed.sh  lean-error-classify.sh  lean-error-summarize.sh  math-watch.py  mathlib-lint.sh  mathlib-search.sh  resolve-deps.py  tdd-watch.py  test-summary.sh
crates/analysis/: Cargo.toml
crates/analysis/src/: lib.rs  mutual_information.rs  spearman.rs  statistical_tests.rs
crates/backtest/: Cargo.toml
crates/backtest/src/: cpcv.rs  lib.rs  multi_day_runner.rs  oracle_replay.rs  regime_stratification.rs  rollover.rs  success_criteria.rs  trade_record.rs
crates/bars/: Cargo.toml
crates/bars/src/: builder_base.rs  dollar_bar.rs  lib.rs  tick_bar.rs  time_bar.rs  volume_bar.rs
crates/book-builder/: Cargo.toml
crates/book-builder/src/: flow.rs  lib.rs
crates/common/: Cargo.toml
crates/common/src/: bar.rs  book.rs  event.rs  execution_costs.rs  lib.rs  time_utils.rs
crates/databento-ingest/: Cargo.toml
crates/databento-ingest/src/: lib.rs
crates/event-features/: Cargo.toml
crates/event-features/src/: lib.rs
crates/event-labels/: Cargo.toml
crates/event-labels/src/: lib.rs
crates/features/: Cargo.toml
crates/features/src/: bar_features.rs  lib.rs
crates/features/tests/: parity_model_features.rs  parity_tool_integration.rs
crates/flow-features/: Cargo.toml
crates/flow-features/src/: lib.rs
crates/labels/: Cargo.toml
crates/labels/src/: lib.rs
crates/mbo-tokenizer/: Cargo.toml
crates/mbo-tokenizer/src/: lib.rs
crates/models/: Cargo.toml
crates/models/src/: lib.rs
crates/rithmic-client/: Cargo.toml
crates/rithmic-client/src/: adapter.rs  auth.rs  bbo_reader.rs  capture.rs  client.rs  config.rs  connection.rs  counters.rs  dispatcher.rs  error.rs  health_log.rs  heartbeat.rs  lib.rs  pipeline.rs  rti.rs  state.rs  subscription.rs
crates/rithmic-client/tests/: protobuf_codegen.rs
crates/xgboost-ffi/: Cargo.toml  build.rs
crates/xgboost-ffi/src/: lib.rs  training.rs
research/: RESEARCH_INDEX.md
research/01-bar-level-cpcv/: README.md
research/02-tick-level-serial/: README.md
research/02-tick-level-serial/results/: cpcv-performance-report.md
research/03-event-lob-probability/: README.md
research/03-event-lob-probability/scripts/: analyze-baseline-s3.py  analyze-validation.py  batch-export.sh  ec2-launch-bilateral-export.sh  ec2-launch-cpcv.sh  ec2-launch-event-export.sh  ec2-launch-gate-test.sh  ec2-launch-imbalance-cpcv-distributed.sh  ec2-launch-imbalance-cpcv.sh
research/04-mbo-grammar/: Dockerfile  cloud-run-phase3-B.toml  cloud-run-phase3-C.toml  cloud-run-phase3.toml  data.py  model.py  phase3_signal_check.py  precompute_phase3.py  run_phase3.sh  run_phase3_B.sh  run_phase3_C.sh  train_finetune.py
src/: lib.rs
tests/: xgboost_ffi_integration.rs
tests/fixtures/: expected_predictions.json  generate_test_fixtures.py  invalid_model.json  norm_stats.json  norm_stats_bad_length.json  test_model_2f.json  test_stage1.json  test_stage2.json
tools/bar-feature-export/: Cargo.toml
tools/bar-feature-export/src/: main.rs
tools/book-verify/: Cargo.toml
tools/book-verify/src/: main.rs
tools/cloud-run/: Cargo.toml
tools/cloud-run/src/: build.rs  config.rs  launch.rs  main.rs  monitor.rs  runpod.rs  runpod_bootstrap.rs  userdata.rs
tools/cpcv-backtest/: Cargo.toml
tools/cpcv-backtest/src/: fold_runner.rs  lib.rs  main.rs  statistics.rs
tools/event-backtest/: Cargo.toml
tools/event-backtest/src/: data.rs  fold_runner.rs  main.rs  statistics.rs
tools/event-export/: Cargo.toml
tools/event-export/src/: main.rs
tools/gate-test/: Cargo.toml
tools/gate-test/src/: main.rs
tools/info-decomposition/: Cargo.toml
tools/info-decomposition/src/: main.rs
tools/markov-baseline/: Cargo.toml
tools/markov-baseline/src/: main.rs
tools/mbo-tokenize/: Cargo.toml
tools/mbo-tokenize/src/: main.rs
tools/oracle-expectancy/: Cargo.toml
tools/oracle-expectancy/src/: lib.rs  main.rs
tools/parity-test/: Cargo.toml
tools/parity-test/src/: lib.rs  main.rs
tools/parity-test/tests/: bar_count_parity_test.rs  cli_wire_test.rs  pipeline_test.rs
tools/rithmic-live/: Cargo.toml
tools/rithmic-live/src/: main.rs
tools/subordination-test/: Cargo.toml
tools/subordination-test/src/: main.rs
(+181 files in other folders)
