[package]
name = "mbo-dl-rust"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/book-builder",
    "crates/backtest",
    "crates/databento-ingest",
    "crates/rithmic-client",
    "crates/xgboost-ffi",
    "crates/event-features",
    "crates/event-labels",
    "crates/flow-features",
    "tools/rithmic-live",
    "tools/event-export",
    "tools/event-backtest",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Kenoma Labs"]
license = "MIT"

[workspace.dependencies]
# Internal crates
common = { path = "crates/common" }
book-builder = { path = "crates/book-builder" }
backtest = { path = "crates/backtest" }
databento-ingest = { path = "crates/databento-ingest" }
rithmic-client = { path = "crates/rithmic-client" }
xgboost-ffi = { path = "crates/xgboost-ffi" }
event-features = { path = "crates/event-features" }
event-labels = { path = "crates/event-labels" }
flow-features = { path = "crates/flow-features" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Data formats
parquet = "58"
arrow = "58"

# Databento (first-party)
dbn = "0.50"
# databento = "0.42"  # Uncomment when ready for live data

# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime (for Rithmic client)
tokio = { version = "1", features = ["full"] }

# Protobuf (for Rithmic)
prost = "0.14"
prost-build = "0.14"

# WebSocket (for Rithmic)
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }

# Fast hashing (FxHashMap for integer/string keys)
rustc-hash = "2"

# Benchmarking
criterion = "0.5"

# Error handling
thiserror = "2"
anyhow = "1"

# Parallelism
rayon = "1"

# AWS
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"

# Compression
flate2 = "1"

# Encoding
base64 = "0.22"

# Time
chrono = "0.4"

# Testing
tempfile = "3"

[dev-dependencies]
xgboost-ffi = { workspace = true }
serde_json = { workspace = true }

[profile.release]
lto = true
codegen-units = 1
strip = true
