[package]
name = "rithmic-client"
version.workspace = true
edition.workspace = true

[dependencies]
common = { workspace = true }
book-builder = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
flate2 = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
native-tls = "0.2"
futures-util = "0.3"

[build-dependencies]
prost-build = { workspace = true }
