[package]
name = "bar-feature-export"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bar-feature-export"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
book-builder = { workspace = true }
bars = { workspace = true }
features = { workspace = true }
labels = { workspace = true }
databento-ingest = { workspace = true }
clap = { workspace = true }
parquet = { workspace = true }
arrow = { workspace = true }
anyhow = { workspace = true }
