[package]
name = "cpcv-backtest"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cpcv-backtest"
path = "src/main.rs"

[dependencies]
backtest = { workspace = true }
xgboost-ffi = { workspace = true }
parquet = { workspace = true }
arrow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
rayon = { workspace = true }
