[package]
name = "event-backtest"
version.workspace = true
edition.workspace = true

[[bin]]
name = "event-backtest"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
backtest = { workspace = true }
event-features = { workspace = true }
event-labels = { workspace = true }
xgboost-ffi = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
