[package]
name = "gate-test"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gate-test"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
