[package]
name = "oracle-expectancy"
version.workspace = true
edition.workspace = true

[[bin]]
name = "oracle-expectancy"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
backtest = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
