[package]
name = "rithmic-live"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rithmic-live"
path = "src/main.rs"

[dependencies]
rithmic-client = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
chrono = { workspace = true }
