[package]
name = "subordination-test"
version.workspace = true
edition.workspace = true

[[bin]]
name = "subordination-test"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
bars = { workspace = true }
analysis = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
